still wip, fix errors in gcintranet-appTop-externalLinkMenu-en

--- a/src/gcintranet/appFooter.ejs
+++ b/src/gcintranet/appFooter.ejs
@@ -50,8 +50,8 @@
                     <%_ } -%>
                 <%_ } -%>
                 <%_ if (pr.subTheme == 'esdc' || pr.subTheme == 'labour') { -%>
-                    <section class="col-md-3 col-sm-6 col-lg-3" aria-labelledby="cdts-customSection3">
-                        <h3 id="cdts-customSection3"><^- msg('Corporate') ^></h3>
+                    <section class="col-md-3 col-sm-6 col-lg-3" aria-labelledby="cdts-sectionCorporate">
+                        <h3 id="cdts-sectionCorporate"><^- msg('Corporate') ^></h3>
                         <ul class="list-unstyled">
                             <li><a href="<^- msg('https://esdc.prv/en/branches_regions/index.shtml') ^>"><^- msg('ESDC/SC Intranet') ^></a></li>
                             <li><a href="<^- msg('https://esdc.prv/en/news/index.shtml') ^>"><^- msg('News') ^></a></li>
