still wip, renamed to match top.ejs

--- a/src/gcintranet/top.ejs
+++ b/src/gcintranet/top.ejs
@@ -267,8 +267,8 @@ if (pr.subTheme === 'eccc') {
         <%_ } -%>
     <%_ } -%>
     <%_ if (pr.breadcrumbs != false) { -%>
-        <nav role="navigation" id="wb-bc" property="breadcrumb" aria-labelledby="cdts-breadcrumb">
-            <h2 id="cdts-breadcrumb"><^- msg('You are here:') ^></h2>
+        <nav role="navigation" id="wb-bc" property="breadcrumb" aria-labelledby="breadcrumbPosition">
+            <h2 id="breadcrumbPosition"><^- msg('You are here:') ^></h2>
             <div class="container">
                 <ol class="breadcrumb">
                     <%_ if (pr.breadcrumbs != null) { -%>
