--- a/src/gcweb/top.ejs
+++ b/src/gcweb/top.ejs
@@ -21,8 +21,8 @@
     <div id="wb-bnr" class="container">
         <div class="row">
             <%_ if (pr.lngLinks != null) { -%>
-                <section id="wb-lng" class="col-xs-3 col-sm-12 pull-right text-right" aria-labelledby="cdts-languageLinks">
-                    <h2 class="wb-inv" id="cdts-languageLinks"><^- msg('Language selection') ^></h2>
+                <section id="wb-lng" class="col-xs-3 col-sm-12 pull-right text-right" aria-labelledby="cdts-languageSelection">
+                    <h2 class="wb-inv" id="cdts-languageSelection"><^- msg('Language selection') ^></h2>
                     <ul class="list-inline mrgn-bttm-0">
                         <%_ for (var linkIndex=0; linkIndex<pr.lngLinks.length; linkIndex++) { 
                             const link=pr.lngLinks[linkIndex];-%>
@@ -45,8 +45,8 @@
             <%_ if (pr.search != false) { -%>
                 <%_ if (pr.customSearch != null && pr.customSearch.length > 0) { 
                     const item=pr.customSearch[0]; -%>
-                    <section id="wb-srch" class="col-lg-offset-4 col-md-offset-4 col-sm-offset-2 col-xs-12 col-sm-5 col-md-4 visible-md visible-lg" aria-labelledby="cdts-webSearch">
-                        <h2 id="cdts-webSearch"><^- msg('Search') ^><%= item.placeholder != null? ' ' + item.placeholder: '' %></h2>
+                    <section id="wb-srch" class="col-lg-offset-4 col-md-offset-4 col-sm-offset-2 col-xs-12 col-sm-5 col-md-4 visible-md visible-lg" aria-labelledby="cdts-topSearch">
+                        <h2 id="cdts-topSearch"><^- msg('Search') ^><%= item.placeholder != null? ' ' + item.placeholder: '' %></h2>
                         <form action="<%- item.action %>" method="<%= item.method %>" name="cse-search-box" role="search">
                             <div class="form-group wb-srch-qry">
                                 <label for="<%= item.id != null? item.id: 'wb-srch-q' %>" class="wb-inv"><^- msg('Search') ^><%= item.placeholder != null? ' ' + item.placeholder: '' %></label>
@@ -64,8 +64,8 @@
                         </form>
                     </section>
                 <%_ } else { -%>
-                    <section id="wb-srch" class="col-lg-offset-4 col-md-offset-4 col-sm-offset-2 col-xs-12 col-sm-5 col-md-4" aria-labelledby="cdts-webSearch">
-                        <h2 id="cdts-webSearch"><^- msg('Search') ^></h2>
+                    <section id="wb-srch" class="col-lg-offset-4 col-md-offset-4 col-sm-offset-2 col-xs-12 col-sm-5 col-md-4" aria-labelledby="cdts-topSearch">
+                        <h2 id="cdts-topSearch"><^- msg('Search') ^></h2>
                         <form action="<^- msg('https://www.canada.ca/en/sr/srb.html') ^>" method="get" name="cse-search-box" role="search" accept-charset="utf-8">
                             <div class="form-group wb-srch-qry">
                                 <label for="wb-srch-q" class="wb-inv"><^- msg('Search Canada.ca') ^></label>
